<resources>

    <string name="app_name" translatable="false">app_modelo_mobile</string>

    <string name="btn_enviar" translatable="false">Enviar</string>

    <string name="title_activity_main" translatable="false">Main</string>
    <string name="title_activity_login" translatable="false">Login</string>

    <string name="lbl_login" translatable="false">Login</string>
    <string name="lbl_senha" translatable="false">Senha</string>
    <string name="btn_logar" translatable="false">Logar</string>

    <string name="mensagem_login" translatable="false">Bem vindo, faça seu login</string>

    <string name="lbl_sair" translatable="false">Sair</string>
    <string name="menu_conf" translatable="false">Configuração</string>
    <string name="menu_adicionar" translatable="false">Adicionar</string>
    <string name="menu_Atualizar" translatable="false">Atualizar</string>


    <string name="bnt1" translatable="false">Ficha Medica</string>
    <string name="bnt2" translatable="false">Evolução Fisica</string>
    <string name="bnt3" translatable="false">Relatorio Mensal</string>
    <string name="menu_buscar" translatable="false">Buscar</string>
    <string name="lblEmail" translatable="false">Email</string>
    <string name="str_text_cpf" translatable="false">CPF</string>
    <string name="str_text_nome" translatable="false">Nome</string>
    <string name="mensagem_cadastro" translatable="false">Cadastro</string>
    <string name="lblFichaMedica" translatable="false">FichaMedica</string>
    <string name="lblEvolução" translatable="false">Evolução Fisica</string>
    <string name="lblRelatorio" translatable="false">Relatório Mensal</string>
    <string name="navigation_drawer_open" translatable="false">Abrir</string>
    <string name="navigation_drawer_close" translatable="false">Fechar</string>

    <string name="API_KEY">AIzaSyDVG2keui8Y8anJS2h8ksCVRDaKCrr5ss8</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
