<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMenuLateral"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PessoaActivity"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/toolbar"> </include>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/campo_imagem"
            android:layout_width="match_parent"
            android:layout_height="168dp"
            android:src="@drawable/logo" />
        <TextView
            android:id="@+id/texto_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_text_nome"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:paddingBottom="10dp"
            />

        <EditText
            android:id="@+id/campoNome"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"/>

        <TextView
            android:id="@+id/texto_cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_text_cpf"
            android:paddingVertical="10dp"
            android:textSize="18dp"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/campoCpf"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:inputType="textPassword"
            android:paddingLeft="10dp"/>

        <TextView
            android:id="@+id/texto_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:text="@string/lblEmail"
            android:textSize="18dp"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/campoEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"/>

        <TextView
            android:id="@+id/texto_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_senha"
            android:textSize="18dp"
            android:paddingVertical="10dp"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/buttonCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:background="@color/white"
            android:fontFamily="sans-serif-black"
            android:text="Cadastrar Aluno"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp" />
    </LinearLayout>
    <!--Menu lateral-->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/menu_lateral"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/menu_lateral_cabecalho"
        app:menu="@menu/menu_lateral">
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>